# va-enp-api

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  .talismanrc  README.md  loguru_sandbox.py  mkdocs.yml  pyproject.toml  pytest.ini  run_app_local.py
.github/: pull_request_template.md  renovate.json
.github/actions/build-push-artifacts/: action.yml
.github/actions/ecs-task-render-deploy/: action.yml
.github/workflows/: deploy.yml  export_secrets.yml  pr_run_tests.yml  test_suite.yml
app/: auth.py  constants.py  exceptions.py  limits.py  logging_config.json  logging_config.py  logging_config_playground.py  main.py  plugins.py  routers.py  state.py  telemetry.py  utils.py
app/clients/: redis_client.py  va_profile.py
app/dao/: notifications_dao.py
app/dao/legacy/: notifications_dao.py
app/db/: __init__.py  base.py  db_init.py  model_mixins.py  models.py
app/legacy/clients/: sqs.py  utils.py
app/legacy/dao/: api_key_dao.py  api_keys_dao.py  notifications_dao.py  recipient_identifiers_dao.py  service_sms_sender_dao.py  services_dao.py  templates_dao.py  users_dao.py  utils.py
app/legacy/v2/notifications/: handlers.py  process_notifications.py  resolvers.py  rest.py  route_schema.py  utils.py  validators.py
app/legacy/v2/notifications/services/: implementations.py  interfaces.py  providers.py
app/logging/: logging_config.json  logging_config.py
app/providers/: __init__.py  provider_aws.py  provider_base.py  provider_schemas.py  utils.py
app/v3/: __init__.py
app/v3/device_registrations/: rest.py  route_schema.py  tasks.py
app/v3/notifications/: rest.py  route_schema.py
app/v3/push/: rest.py  route_schema.py
cd/: dev.env  perf.env  prod.env  staging.env  va-enp-api-task-definition.json
ci/: .env.docker  .env.local  .local.env  Dockerfile  Dockerfile.napi_db  docker-compose-ci.yml  docker-compose-local.yml  init_napi_db.sql  otel-collector-config.yaml
docs/: SUMMARY.md  constants.md  index.md  main.md
docs/dao/: notifications_dao.md
docs/db/: base.md  db.md  db_init.md  model_mixins.md  models.md
docs/legacy/v2/notifications/: notification.md  rest.md  route_schema.md  utils.md
docs/logging/: logging_config.md
docs/providers/: provider_aws.md  provider_base.md  provider_schemas.md  providers.md
docs/v3/notifications/: notifications.md  rest.md  route_schema.md
postman/: enp-api.postman_collection.json  readme.md
samples/http/: device_registration.json
scripts/: create_mkdoc_files.py  hide_parameters_demo.py  run_checks.sh  run_tests.sh
tests/: conftest.py  napi_table_data.toml  test_telemetery.py  test_telemetry.py
tests/app/: conftest.py  state.py  test_auth.py  test_limits.py  test_logging_config.py  test_main.py  test_notification_routes.py  test_routers.py  test_state.py
tests/app/clients/: test_redis_client.py  test_va_profile.py
tests/app/db/: test_db_init.py  test_models.py  test_partitioning.py
tests/app/legacy/: conftest.py  test_kwm.py  test_samples.py
tests/app/legacy/clients/: test_sqs.py
tests/app/legacy/dao/: conftest.py  test_api_keys.py  test_notifications.py  test_recipient_identifiers.py  test_service_sms_senders.py  test_services.py  test_template.py  test_templates.py  test_utils.py
tests/app/legacy/v2/notifications/: test_auth.py  test_handlers.py  test_resolvers.py  test_rest.py  test_rest_sms_refactored.py  test_route_schema.py  test_schemas.py  test_service_providers.py  test_services.py  test_sms_flow.py  test_utils.py  test_validators.py
tests/app/providers/: __init__.py  test_provider_aws.py  test_provider_base.py  test_provider_schemas.py
tests/app/v3/device_registrations/: test_rest.py
tests/app/v3/notifications/: test_rest.py
tests/helpers/: api_test_helpers.py
