[tool.poetry]
name = "va-enp-api"
version = "0.0.1"
description = ""
authors = ["VA Enterprise Notification Platform - VA Notify"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "*"}
gunicorn = "*"
uvicorn-worker = "*"
loguru = "*"
pydantic = "^2.9.2"
aiobotocore = "^2.15.2"
botocore = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.group.static_tools]
optional = true

[tool.poetry.group.static_tools.dependencies]
flake8-docstrings-complete = "*"  # Needed to ensure Args are in the docstring
mypy = "*"
pre-commit = "*"
ruff = "*"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true  # https://docs.astral.sh/ruff/settings/#format-docstring-code-format
# docstring-code-line-length = "dynamic"  # https://docs.astral.sh/ruff/settings/#format-docstring-code-line-length
indent-style = "space"
line-ending = "auto"
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Replace pydocstrings with pydoclint when it is ready: https://github.com/astral-sh/ruff/issues/12434
# D417 will not raise an error if there is no arg/param section: https://github.com/astral-sh/ruff/issues/2310
select = ["ANN", "ASYNC", "C901", "DOC", "D", "E4", "E7", "E9", "F", "G", "FAST", "I", "PLE", "PT", "RUF", "W"]
ignore = ["D203", "D213"]
preview = true

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
